--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -41,6 +41,7 @@
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a class="dropdown-item" class="nav-link" href="/paisajes">paisajes lindos</a></li>
                                 <li><a class="dropdown-item" class="nav-link" href="/afectados">lugares afectados</a></li>
+                                <li><a class="dropdown-item" class="aria</li>
                             </ul>
                         </li>
                         {% else %}
