--- a/homeapp/templates/home.html
+++ b/homeapp/templates/home.html
@@ -7,11 +7,11 @@
 <main class="container py-5">
     <section class="card card-body">
 
-        <h1 class="display-1 text-center">Home</h1>
+        <h1 class="display-1 text-center">Presentacion de la paguina</h1>
     
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis alias voluptatibus ad quo perspiciatis blanditiis quisquam, minima, eaque maiores iste necessitatibus ab! Praesentium sed ut quae impedit sapiente minus beatae quo pariatur, debitis ex, porro temporibus assumenda iste. Voluptatem reprehenderit cumque et illo accusamus iusto sequi harum ipsa accusantium deleniti id similique veritatis assumenda doloribus vel, quaerat distinctio pariatur ex facilis. Laboriosam nulla quas ullam ad, eius quod ducimus eum voluptatem cumque culpa excepturi officia eaque corrupti doloribus! Ut omnis fugit enim deserunt error eveniet similique aliquam voluptatem quis necessitatibus eius, quos esse tempore praesentium numquam rerum laborum, voluptates nulla.</p>
 
-        <div class="text-center">
+        <!-- <div class="text-center">
             <a class="btn btn-secondary" href="/signin/">
                 Sign in
             </a>
@@ -20,7 +20,8 @@
             </a>
         </section>
         </section>
-        </div>
+        </div> -->
+
 </main>
 
 {% endblock %}
