--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -7,7 +7,7 @@
 <main class="container py-5">
     <section class="card card-body">
 
-        <h1 class="display-1 text-center">Inicio</h1>
+        <h1 class="display-1 text-center">Perfil del usuario</h1>
     
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur debitis similique officiis perferendis hic, corrupti beatae. Quibusdam vel nobis a ipsam magni debitis neque, atque minima esse quia, ipsa, quos quas totam recusandae sunt. Assumenda, obcaecati reiciendis? Pariatur neque saepe dolores magni similique. Ducimus a corrupti vitae, recusandae veritatis atque.
