--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -7,13 +7,16 @@
     <link type='text/css' href='{% static "css/xd.css" %}' rel ='stylesheet'/>
     <title>Earthlove</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/4773/4773885.png">
+    <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/1755/1755423.png">
 </head>
 
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <nav class="navbar navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
+            <!-- <img src="img/title.png" alt="foto name pag" width="20px"> -->
+            <!-- <link rel="stylesheet" href="img/title.png"> -->
+            <!-- <div style="background-image:url( 'img/title.png')"></div> -->
             <a class="navbar-brand" href="/inicio/">Earthlove</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
