--- a/homeapp/templates/home.html
+++ b/homeapp/templates/home.html
@@ -7,9 +7,20 @@
 <main class="container py-5">
     <section class="card card-body">
 
-        <h1 class="display-1 text-center">Presentacion de la paguina</h1>
-    
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis alias voluptatibus ad quo perspiciatis blanditiis quisquam, minima, eaque maiores iste necessitatibus ab! Praesentium sed ut quae impedit sapiente minus beatae quo pariatur, debitis ex, porro temporibus assumenda iste. Voluptatem reprehenderit cumque et illo accusamus iusto sequi harum ipsa accusantium deleniti id similique veritatis assumenda doloribus vel, quaerat distinctio pariatur ex facilis. Laboriosam nulla quas ullam ad, eius quod ducimus eum voluptatem cumque culpa excepturi officia eaque corrupti doloribus! Ut omnis fugit enim deserunt error eveniet similique aliquam voluptatem quis necessitatibus eius, quos esse tempore praesentium numquam rerum laborum, voluptates nulla.</p>
+        <h1 class="display-1 text-center">Earthlove, una solución al Cambio climático</h1>
+        
+        <h3>Contexto</h3>
+        <p>Actualmente, la raza humana se encuentra en una crisis con el medio ambiente. SE HAN LEVANTADO alertas mundiales sobre el cambio climático y todas sus consecuencias. Pero lamentablemente esta alerta no llega a ser más que una piedra en el zapato para la sociedad. La sociedad es un PILAR FUNDAMENTAL en esto, ya que al revertir y ayudar al planeta Tierra, se logrará que la raza humana pueda vivir por mucho más tiempo en este querido planeta. Para esto, una de las posibles soluciones que se plantean es fomentar actividades que van hacia un comportamiento más amigable con el medio ambiente. Para esto, una de las posibles soluciones que se plantean es fomentar actividades que van hacia un comportamiento más amigable con el medio ambiente y así lograr hábitos nuevos. Pero la sociedad no está preparada ni en conocimiento ni en costumbres para realizar un cambio de hábitos tan bruscamente que puedan ayudar al planeta.
+        </p>
+
+        <h3>Solición</h3>
+        <img src="img/title.jpg" alt="Foto titulo" style="width: 200px;">
+        <div style="background-image:url( 'img/title.jpg')"></div>
+        <p>
+            EarthLove es una página web en la que se hace un seguimiento de la actividad día a día del usuario, para que así tenga consciencia de cómo y cuánto está contribuyendo a la causa. Así mismo, puede encontrar información al respecto del cambio climático y cómo afecta a cada sector de una población. La característica distintiva de nuestro proyecto es que el usuario es quien cambia la página, él puede ir registrando lo que ha hecho en la semana y ver por ejemplo cuántos litros de agua ha ahorrado, en cuánto ha reducido la huella de carbono, etc; con estadísticas y gráficos. De igual forma, entusiasmar al usuario con consejos, los cuales le demuestre que pequeñas acciones pueden beneficiar enormemente, tanto a él como al planeta Tierra. El acceso a una fuente de datos externa a través de una API lo incorporará con toda la información necesaria al respecto, el cambio climático, consecuencias de tener hábitos que se ocupen de cuidar el medio ambiente, gráficas al respecto, etc.
+
+        </p>
+
 
         <!-- <div class="text-center">
             <a class="btn btn-secondary" href="/signin/">
