--- a/homeapp/templates/base.html
+++ b/homeapp/templates/base.html
@@ -32,8 +32,12 @@
                             <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/comunidad/">Comunidad de noticias</a>
+                            <a class="nav-link" aria-current="page" href="/comunidad/">Comunidad de noticias</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/nosotros">Nosotros</a>
+                        </li>
+
                         {% if user.is_authenticated %}
                         <li class="nav-item">
                             <a class="nav-link" href="/inicio">Inicio</a>
