--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -26,19 +26,19 @@
             
                 <div class="mb-3">
                     <label for="titulo"><b>Título de la noticia</b></label>
-                    <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Escribe el título de la noticia">
+                    <input type="text" name="titulo" id="titulo" class="form-control" placeholder="Escribe el título de la noticia" required=True>
                 </div>
                 <div class="mb-3">
                     <label for="descripcion"><b>Descripción de la noticia</b></label>
-                    <input type="text" name="descripcion" id="descripcion" class="form-control" placeholder="Escribe una breve descripción de la noticia (máx. 200 carácteres)">
+                    <input type="text" name="descripcion" id="descripcion" class="form-control" placeholder="Escribe una breve descripción de la noticia (máx. 200 carácteres)" required=True>
                 </div>
                 <div class="mb-3">
                     <label for="url"><b>URL</b></label>
-                    <input type="text" name="url" id="url" class="form-control" placeholder="URL">
+                    <input type="text" name="url" id="url" class="form-control" placeholder="URL" required=True>
                 </div>
                 <div class="mb-3">
                     <label for="url_img"><b>URL de imagen a mostrar</b></label>
-                    <input type="text" name="url_img" id="url_img" class="form-control" placeholder="URL">
+                    <input type="text" name="url_img" id="url_img" class="form-control" placeholder="URL" required=True>
                 </div>
             
                 <button class="btn btn-primary">
