TIene error la parte de los modelos

--- a/homeapp/templates/comunidad.html
+++ b/homeapp/templates/comunidad.html
@@ -24,6 +24,7 @@
             <li>
                 <h1>{{noticia.titulo}}</h1>
                 <p>{{noticia.descripcion}}</p>
+                <p>{{noticia.user.username}}</p>
             </li>
             {% endfor %}
         </ul>
