nueva estaña de mipost

--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -14,6 +14,10 @@
         </p>
     </section>
     <br>
+    <a class="btn btn-secondary" href="/mipost/">
+        Mis post
+    </a>
+    <br>
     <br>
     <div id="general">
         <div id="publicarnoticia">
