--- a/homeapp/templates/paisajes.html
+++ b/homeapp/templates/paisajes.html
@@ -8,5 +8,18 @@
     <section class="card card-body">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d113630.99097617196!2d-109.4212152079628!3d-27.12580311993398!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9947f017a8d4ae2b%3A0xbbe5b3edc02a2db6!2sIsla%20de%20Pascua!5e0!3m2!1ses-419!2scl!4v1698283240594!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
+
+    <section>
+        <form method="post" action="{% url 'incrementar_contador' 1 %}">
+        {% csrf_token %}
+        <button type="submit">Dar Me Gusta: {{ contadores.contador1 }} </button>
+        </form>
+            
+        <form method="post" action="{% url 'incrementar_contador' 2 %}">
+            {% csrf_token %}
+            <button type="submit">Compartir: {{ contadores.contador2 }}</button>
+        </form>
+    </section>
+
 </main>
 {%endblock%}
