--- a/homeapp/templates/signin.html
+++ b/homeapp/templates/signin.html
@@ -8,23 +8,23 @@
     <div class="row">
         <section class="col-md-4 offset-md-4 mt-5">
             <form action="/signin/" method="POST" class="card card-body">
-                <h1 class="text-center">Sign in</h1>
+                <h1 class="text-center">Iniciar sesión</h1>
             
                 {{error}}
                 {% csrf_token %}
             
                 <div class="mb-3">
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="Write your username">
+                    <label for="username">Nombre de usuario:</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Escribe tu nombre de usuario">
                 </div>
             
                 <div class="mb-3">
-                    <label for="password">Password:</label>
-                    <input type="password" name="password" id="password" class="form-control" placeholder="Write your password">
+                    <label for="password">Contraseña:</label>
+                    <input type="password" name="password" id="password" class="form-control" placeholder="Escribe tu contraseña">
                 </div>
             
                 <button class="btn btn-primary">
-                    Sign in
+                    Iniciar sesión
                 </button>
             
             </form>
