--- a/homeapp/templates/signup.html
+++ b/homeapp/templates/signup.html
@@ -9,27 +9,27 @@
     <div class="row">
         <div class="col-md-4 offset-md-4 mt-5">
             <form action="/signup/" method="POST" class="card card-body">
-                <h1 class="text-center" >Signup</h1>
+                <h1 class="text-center" >Crea tu cuenta</h1>
                 {{error}}
                 {% csrf_token %}
 
                 <div class="mb-3">
-                    <label for="username">Username:</label>
-                    <input type="text" name="username" id="username" class="form-control" placeholder="Write your username">
+                    <label for="username">Nombre de usuario:</label>
+                    <input type="text" name="username" id="username" class="form-control" placeholder="Escribe tu nombre de usuario">
                 </div>
 
                 <div class="mb-3">
-                    <label for="password1">Password:</label>
-                    <input type="password" name="password1" id="password1" class="form-control" placeholder="Write your password">
+                    <label for="password1">Contraseña:</label>
+                    <input type="password" name="password1" id="password1" class="form-control" placeholder="Escribe tu contraseña">
                 </div>
 
                 <div class="mb-3">
-                    <label for="password2">Confirm your password:</label>
-                    <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirm your password">
+                    <label for="password2">Confirma tu contraseña:</label>
+                    <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirma tu contraseña">
                 </div>
 
                 <button class="btn btn-primary">
-                    Signup
+                    Registrarse
                 </button>
             </form>
         </div>
