arregla,os el error del detetee

--- a/homeapp/templates/una.html
+++ b/homeapp/templates/una.html
@@ -18,20 +18,14 @@
         </button>
     </form>
     <br>
-    <form method="post">
+        
+    <form action="{% url 'delete' una.id %}" method="post">
         {% csrf_token %}
         <button>
             Delete
         </button>
     </form>
-    {% for no in noti %}
-    <form action="{% url 'delete' task.id %}" method="post">
-        {% csrf_token %}
-        <button>
-            Delete
-        </button>
-    </form>
-    {% endfor %}
+    
 
     </section>
 </main>
