--- a/homeapp/templates/inicio.html
+++ b/homeapp/templates/inicio.html
@@ -6,13 +6,12 @@
 <br>
 <main class="container py-5">
     <section class="card card-body">
-
         <h1 class="display text-center">Perfil del usuario</h1>
-        <b>Nombre de usuario:</b> {{user}}
-        <b>Número de publicaciones:</b> {{num_publicaciones}}
-        <b>Veces que se han compartido tus noticias:</b> {{compartidos}}
-        <b>Total de 'Me gusta' recibidos:</b> {{total_likes}}
-        <b>Tu noticia con mayor interacción:</b>
+        <p><b>Nombre de usuario: </b>{{user}}</p>
+        <p><b>Número de publicaciones:</b> {{num_publicaciones}}</p>
+        <p><b>Veces que se han compartido tus noticias:</b> {{compartidos}}</p>
+        <p><b>Total de 'Me gusta' recibidos:</b> {{total_likes}}</p>
+        <p><b>Tu noticia con mayor interacción:</b></p>
     </section>
     <br>
     <a class="btn btn-secondary" href="/mipost/">
